# crucible

./: .gitignore  CITATION.cff  LICENCE  README.md  RELEASE_CHECKLIST.md  pyproject.toml  run.py
.github/workflows/: ci.yml  docs.yml  publish.yml
crucible/: evaluate.py  hardware.py  judge.py  llamacpp.py  models.py  report.py  run.py  runner.py
docs/: benchmark-authoring.md  conf.py  design-notes.md  index.md  installation.md  reports.md  tutorials.md
docs/_static/: custom.css  example-report.html
docs/api/: index.rst  modules.rst
tests/: code_generation.yaml  generic_benchmarks.yaml  reasoning.yaml  summarization.yaml  technical_writing.yaml
